--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,11 @@ dependencies:
   go_router: any
   intl: any
   flutter_svg: any
+  dio: any
+  retrofit: any
+  json_annotation: any
+  image_network: any
+  pretty_dio_logger: any
 
 dev_dependencies:
   flutter_test:
@@ -38,6 +43,9 @@ dev_dependencies:
   build_runner:
   flutter_gen_runner:
   flutter_lints: ^2.0.0
+  retrofit_generator: 
+  json_serializable:
+
 
 flutter:
 
